--- a/support.html
+++ b/support.html
@@ -236,7 +236,7 @@
                     </li>
                 </ul>
             </div>
-            <div class="fromAreasRight">
+            <div class="fromAreasRight suportRightArea">
                 <div  id="tab1" class="fromAreasTabsContainer">
                     <div class="fromAreasTabsContainerLeft fromAreasSuportLeft">
                         <div class="faqRightAccardion">
@@ -271,7 +271,7 @@
                         <h3>FREELANCE</h3>
                         <img src="img/blogMibileImg1.png" alt="" class="blogMibileImg">
                     </div>
-                    <svg class="closeSvgBlog" width="26" height="26" viewBox="0 0 26 26" fill="none" xmlns="http://www.w3.org/2000/svg">
+                    <svg class="closeSvgBlog closeSvgBlogPosition" width="26" height="26" viewBox="0 0 26 26" fill="none" xmlns="http://www.w3.org/2000/svg">
                         <path d="M25 1L1 25M1 1L25 25" stroke="black" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"/>
                     </svg>
                 </div>
@@ -334,7 +334,7 @@
                         <h3>IT company</h3>
                         <img src="img/blogMibileImg2.png" alt="" class="blogMibileImg">
                     </div>
-                    <svg class="closeSvgBlog" width="26" height="26" viewBox="0 0 26 26" fill="none" xmlns="http://www.w3.org/2000/svg">
+                    <svg class="closeSvgBlog closeSvgBlogPosition" width="26" height="26" viewBox="0 0 26 26" fill="none" xmlns="http://www.w3.org/2000/svg">
                         <path d="M25 1L1 25M1 1L25 25" stroke="black" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"/>
                     </svg>
                 </div>
@@ -409,7 +409,7 @@
                         <h3>TRADING</h3>
                         <img src="img/blogMibileImg3.png" alt="" class="blogMibileImg">
                     </div>
-                    <svg class="closeSvgBlog" width="26" height="26" viewBox="0 0 26 26" fill="none" xmlns="http://www.w3.org/2000/svg">
+                    <svg class="closeSvgBlog closeSvgBlogPosition" width="26" height="26" viewBox="0 0 26 26" fill="none" xmlns="http://www.w3.org/2000/svg">
                         <path d="M25 1L1 25M1 1L25 25" stroke="black" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"/>
                     </svg>
                 </div>
@@ -442,7 +442,7 @@
                         <h3>Online Services</h3>
                         <img src="img/blogMibileImg4.png" alt="" class="blogMibileImg">
                     </div>
-                    <svg class="closeSvgBlog" width="26" height="26" viewBox="0 0 26 26" fill="none" xmlns="http://www.w3.org/2000/svg">
+                    <svg class="closeSvgBlog closeSvgBlogPosition" width="26" height="26" viewBox="0 0 26 26" fill="none" xmlns="http://www.w3.org/2000/svg">
                         <path d="M25 1L1 25M1 1L25 25" stroke="black" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"/>
                     </svg>
                 </div>
