--- a/index.html
+++ b/index.html
@@ -106,19 +106,19 @@
         </div>
         <ul class="navbarNav">
                 <li>
-                    <a href="#">Our Expertise</a>
+                    <a href="support.html">Our Expertise</a>
                     <img src="img/btnArrow.svg" alt="">
                 </li>
                 <li>
-                    <a href="#">Estonian Companies</a>
+                    <a href="registration.html">Estonian Companies</a>
                     <img src="img/btnArrow.svg" alt="">
                 </li>
                 <li>
-                    <a href="#">LegalBox</a>
+                    <a href="blog.html">LegalBox</a>
                     <img src="img/btnArrow.svg" alt="">
                 </li>
                 <li>
-                    <a href="#">Rates</a>
+                    <a href="post.html">Rates</a>
                     <img src="img/btnArrow.svg" alt="">
                 </li>
                 <li>
