--- a/post.html
+++ b/post.html
@@ -460,7 +460,7 @@
 
                                 <form action="" class="comentForm">
                                     <textarea name="" id="" cols="30" rows="10"></textarea>
-                                    <input type="submit" value="SEND">
+                                    <input type="submit" value="SEND" class="open-popup">
                                 </form>
                             </div>
                         </div>
@@ -541,7 +541,7 @@
                                 </div>
 
                                 <form action="" class="comentForm">
-                                    <textarea name="" id="" cols="30" rows="10"></textarea>
+                                    <textarea name="" id="" cols="30" rows="10" placeholder="Add a comment…"></textarea>
                                     <input type="submit" value="SEND">
                                 </form>
                             </div>
@@ -623,6 +623,7 @@
         <div class="otherArticlesSliderDots"></div>
       </div>
     </div>
+    <!--Other Articles Slider-->
 
     <footer class="footer">
         <div class="wrapper">
