--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
                     <a href="registration.html">LegalBox</a>
                 </li>
                 <li>
-                    <a href="#">Rates</a>
+                    <a href="post.html">Rates</a>
                 </li>
                 <li>
                     <a href="blog.html">Blog</a>
@@ -95,7 +95,7 @@
                 <a href="#">
                     <img src="img/logoBurger.png" alt="">
                 </a>
-                <a href="#" class="burgerClose">
+                <a href="#" class="burger-open">
                     <img src="img/close.png" alt="">
                 </a>
         </div>
