--- a/post.html
+++ b/post.html
@@ -190,7 +190,7 @@
         <div class="wrapper">
             <div class="postTabsLeft">
                 <h2>Why Fintech successfully setting up in Estonia?</h2>
-                <ul class="tabs">
+                <ul class="tabs tabsArticle">
                     <li>
                         <a href="#tab1">Why Fintech successfully setting up in Estonia?
                         </a>
