--- a/index.html
+++ b/index.html
@@ -560,6 +560,24 @@
                     <div class="aboutMaxwiseClientsImgItem">
                         <img src="img/docker.png" alt="docker">
                     </div>
+                    <div class="aboutMaxwiseClientsImgItem">
+                        <img src="img/netflix.png" alt="netflix">
+                    </div>
+                    <div class="aboutMaxwiseClientsImgItem">
+                        <img src="img/medium.png" alt="medium">
+                    </div>
+                    <div class="aboutMaxwiseClientsImgItem">
+                        <img src="img/google.png" alt="google">
+                    </div>
+                    <div class="aboutMaxwiseClientsImgItem">
+                        <img src="img/youtube.png" alt="youtube">
+                    </div>
+                    <div class="aboutMaxwiseClientsImgItem">
+                        <img src="img/vercel.png" alt="vercel">
+                    </div>
+                    <div class="aboutMaxwiseClientsImgItem">
+                        <img src="img/docker.png" alt="docker">
+                    </div>
                 </div>
             </div>
         </div>
