--- a/support.html
+++ b/support.html
@@ -267,7 +267,7 @@
                         </div>
                     </div>
                     <div class="fromAreasTabsContainerRight">
-                        <img src="img/legalImg1.png" alt="" class="desctopImg">
+                        <img src="img/suportImg1.png" alt="" class="desctopImg">
                         <h3>FREELANCE</h3>
                         <img src="img/blogMibileImg1.png" alt="" class="blogMibileImg">
                     </div>
