--- a/index.html
+++ b/index.html
@@ -816,7 +816,7 @@
     <script src="script/blogSlider.js"></script>
     <script src="script/animation.js"></script>
     <script src="script/clientsSlider.js"></script>
-    <script>
+    <!-- <script>
         $(document.body).on('load', function () {
             $(document).ready(function(){
             setTimeout(function(){
@@ -824,6 +824,6 @@
             }, 1);
         });
         });
-    </script>
+    </script> -->
 </body>
 </html>
