--- a/support.html
+++ b/support.html
@@ -205,7 +205,7 @@
     <!--Navigation-->
 
 
-    <div class="fromAreas fromAreas2">
+    <div class="fromAreas">
         <div class="wrapper">
             <div class="fromAreasLeft">
                 <h2>We are approached from areas:</h2>
@@ -238,8 +238,9 @@
                 </ul>
             </div>
         </div>
-        <div class="fromAreasRight fromAreasPosition">
+        <div class="fromAreasRight">
             <div  id="tab1" class="fromAreasTabsContainer">
+                <div class="fromAreasScroll">
                 <div class="fromAreasTabsContainerLeft ">
                     <div class="faqRightAccardion">
                         <h3 class="heading fromAreasSuportTittle">Shareholders agreement</h3>
@@ -268,7 +269,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="fromAreasTabsContainerRight">
+                <div class="fromAreasTabsContainerRight suportFromRight">
                     <img src="img/legalImg1.png" alt="" class="desctopImg">
                     <h3>FREELANCE</h3>
                     <img src="img/blogMibileImg1.png" alt="" class="blogMibileImg">
@@ -277,8 +278,10 @@
                     <path d="M25 1L1 25M1 1L25 25" stroke="black" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"/>
                 </svg>
             </div>
+            </div>
 
             <div  id="tab2" class="fromAreasTabsContainer">
+                <div class="fromAreasScroll">
                 <div class="fromAreasTabsContainerLeft fromAreasSuportLeft">
                     <div class="faqRightAccardion">
                         <h3 class="heading fromAreasSuportTittle">Preparation of the following constituent documents</h3>
@@ -331,7 +334,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="fromAreasTabsContainerRight">
+                <div class="fromAreasTabsContainerRight suportFromRight">
                     <img src="img/legalImg2.png" alt="" class="desctopImg">
                     <h3>IT company</h3>
                     <img src="img/blogMibileImg2.png" alt="" class="blogMibileImg">
@@ -340,8 +343,10 @@
                     <path d="M25 1L1 25M1 1L25 25" stroke="black" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"/>
                 </svg>
             </div>
+            </div>
             
             <div  id="tab3" class="fromAreasTabsContainer">
+                <div class="fromAreasScroll">
                 <div class="fromAreasTabsContainerLeft fromAreasSuportLeft">
                     <div class="faqRightAccardion">
                         <h3 class="heading fromAreasSuportTittle">Preparation of employment contracts with the company staff</h3>
@@ -406,7 +411,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="fromAreasTabsContainerRight">
+                <div class="fromAreasTabsContainerRight suportFromRight">
                     <img src="img/legalImg3.png" alt="" class="desctopImg">
                     <h3>TRADING</h3>
                     <img src="img/blogMibileImg3.png" alt="" class="blogMibileImg">
@@ -415,8 +420,10 @@
                     <path d="M25 1L1 25M1 1L25 25" stroke="black" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"/>
                 </svg>
             </div>
+            </div>
 
             <div  id="tab4" class="fromAreasTabsContainer">
+                <div class="fromAreasScroll">
                 <div class="fromAreasTabsContainerLeft fromAreasSuportLeft">
                     <div class="faqRightAccardion">
                         <h3 class="heading fromAreasSuportTittle">Preparation of documents for the liquidation of your business</h3>
@@ -439,7 +446,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="fromAreasTabsContainerRight">
+                <div class="fromAreasTabsContainerRight suportFromRight">
                     <img src="img/ImageFX4.png" alt="" class="desctopImg">
                     <h3>Online Services</h3>
                     <img src="img/blogMibileImg4.png" alt="" class="blogMibileImg">
@@ -448,7 +455,7 @@
                     <path d="M25 1L1 25M1 1L25 25" stroke="black" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"/>
                 </svg>
             </div>
-
+            </div>
         </div>
     </div>
     <!--We are approached from areas:-->
