--- a/registration.html
+++ b/registration.html
@@ -238,13 +238,14 @@
             </div>
             <div class="fromAreasRight fromAreasRegistrationRight">
                 <div  id="tab1" class="fromAreasTabsContainer fromAreasTabsRegitstration">
-                    <svg class="closeSvgBlog" width="26" height="26" viewBox="0 0 26 26" fill="none" xmlns="http://www.w3.org/2000/svg">
-                        <path d="M25 1L1 25M1 1L25 25" stroke="black" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"/>
-                    </svg>
-                    <h4>Estonian company registration with an e-residency card</h4>
-                    <p>Such registration is possible, if founder has a valid e-residency card, ID-card reader, e-residency card`s PIN codes and a special software solution. If you do not have such, you can apply for an e-residency card here: 
-                    <a href="https://apply.gov.ee/">https://apply.gov.ee/</a>
-                    </p>
+                    <div class="fromAreasScroll fromAreasScroll2">
+                        <svg class="closeSvgBlog" width="26" height="26" viewBox="0 0 26 26" fill="none" xmlns="http://www.w3.org/2000/svg">
+                            <path d="M25 1L1 25M1 1L25 25" stroke="black" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"/>
+                        </svg>
+                        <h4>Estonian company registration with an e-residency card</h4>
+                        <p>Such registration is possible, if founder has a valid e-residency card, ID-card reader, e-residency card`s PIN codes and a special software solution. If you do not have such, you can apply for an e-residency card here: 
+                        <a href="https://apply.gov.ee/">https://apply.gov.ee/</a>
+                        </p>
                         <div class="tabsList1">
                             <h3>Technical requirements</h3>
                             <ul>
@@ -296,35 +297,38 @@
                                 <img src="img/btnArrow.svg" alt="">
                             </button>
                         </div>
+                    </div>
                 </div>
 
                 <div  id="tab2" class="fromAreasTabsContainer fromAreasTabsContainer2 fromAreasTabsRegitstration">
-                    <svg class="closeSvgBlog" width="26" height="26" viewBox="0 0 26 26" fill="none" xmlns="http://www.w3.org/2000/svg">
-                        <path d="M25 1L1 25M1 1L25 25" stroke="black" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"/>
-                    </svg>
-                        <h3>Registration of an Estonian company in the notary office personally or via authorized person</h3>
-                        <p>Such registration of a company is possible if the founder does not have an e-residency card</p>
-                        <div class="tabsList2">
-                            <h3>Make registration steps</h3>
-                            <ul>
-                                <li class="tabsList2Icon1">The founder has to visit an estonian notary personally or issue a power of attorney to maxwise oü lawyer who represents him in front of estonian notary. The draft of power of attorney and instruction on its legalization is provided by Maxwise oü.</li>
-                                <li class="tabsList2Icon2">The form for registration of the company should be filled in. You will find the registration form here: xxxx</li>
-                                <li class="tabsList2Icon3">Payment of the invoice/proforma for the services of maxwise oü.</li>
-                                <li class="tabsList2Icon4">Maxwise oü prepares documents for the establishment of a company</li>
-                                <li class="tabsList2Icon5">Notary schedules a time for signing the documents to register the company. </li>
-                                <li class="tabsList2Icon6">Notary sends signed documents to estonian commercial register. Company is registered during 5 business days</li>
-                            </ul>
+                    <div class="fromAreasScroll fromAreasScroll2">
+                        <svg class="closeSvgBlog" width="26" height="26" viewBox="0 0 26 26" fill="none" xmlns="http://www.w3.org/2000/svg">
+                            <path d="M25 1L1 25M1 1L25 25" stroke="black" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"/>
+                        </svg>
+                            <h3>Registration of an Estonian company in the notary office personally or via authorized person</h3>
+                            <p>Such registration of a company is possible if the founder does not have an e-residency card</p>
+                            <div class="tabsList2">
+                                <h3>Make registration steps</h3>
+                                <ul>
+                                    <li class="tabsList2Icon1">The founder has to visit an estonian notary personally or issue a power of attorney to maxwise oü lawyer who represents him in front of estonian notary. The draft of power of attorney and instruction on its legalization is provided by Maxwise oü.</li>
+                                    <li class="tabsList2Icon2">The form for registration of the company should be filled in. You will find the registration form here: xxxx</li>
+                                    <li class="tabsList2Icon3">Payment of the invoice/proforma for the services of maxwise oü.</li>
+                                    <li class="tabsList2Icon4">Maxwise oü prepares documents for the establishment of a company</li>
+                                    <li class="tabsList2Icon5">Notary schedules a time for signing the documents to register the company. </li>
+                                    <li class="tabsList2Icon6">Notary sends signed documents to estonian commercial register. Company is registered during 5 business days</li>
+                                </ul>
+                            </div>
+                        <div class="fromAreasRightButtons">
+                            <button class="fromAreasRightButtonsPrice">Price: 450 Euro
+                                <span>
+                                    <img src="img/register.svg" alt="question">
+                                </span>
+                            </button>
+                            <button class="fromAreasRightButtonsGet">
+                                GET STARTED
+                                <img src="img/btnArrow.svg" alt="Arrow">
+                            </button>
                         </div>
-                    <div class="fromAreasRightButtons">
-                        <button class="fromAreasRightButtonsPrice">Price: 450 Euro
-                            <span>
-                                <img src="img/register.svg" alt="question">
-                            </span>
-                        </button>
-                        <button class="fromAreasRightButtonsGet">
-                            GET STARTED
-                            <img src="img/btnArrow.svg" alt="Arrow">
-                        </button>
                     </div>
                 </div>
             </div>
