--- a/registration.html
+++ b/registration.html
@@ -56,7 +56,7 @@
 
     <div class="bunner">
         <div class="wrapper">
-            <div class="bunnerLeft">
+            <div class="bunnerLeft bunnerLeftRegistration">
                     <h1>
                         Company <br> registration <br> in Estonia
                     </h1>
@@ -277,7 +277,7 @@
                                 <li class="tabsList2Icon6">Estonian commercial register registers the company. Usually it takes up to 5 working days. </li>
                             </ul>
                         </div>
-                        <div class="fromAreasRightButtons">
+                        <div class="fromAreasRightButtons fromAreasRightButtonsRegistration">
                             <div class="priceOpen">
                                 <img src="img/close.png" alt="" class="opacityNoneBtn">
                                 <ul>
@@ -292,7 +292,7 @@
                                     <img src="img/register.svg" alt="">
                                 </span>
                             </button>
-                            <button class="fromAreasRightButtonsGet">
+                            <button class="fromAreasRightButtonsGet fromAreasRightButtonsGetRegistration">
                                 GET STARTED
                                 <img src="img/btnArrow.svg" alt="">
                             </button>
