--- a/index.html
+++ b/index.html
@@ -239,29 +239,29 @@
                         </svg>  
                     </div>
                 </div>
-                <div class="transformSlider">
-                    <div class="transformItem">
+                <div class="transformSlider transformSliderPage">
+                    <div class="transformItem transformItems">
                         <h3>Company registration</h3>
                         <p>Setting up companies in Estonia.
                             Company registration either with or without e-residency.
                             Virtual office and Contract person in Estonia included.</p>
                             <button>Learn more</button>
                     </div>
-                    <div class="transformItem">
+                    <div class="transformItem transformItems">
                         <h3>Company registration</h3>
                         <p>Setting up companies in Estonia.
                             Company registration either with or without e-residency.
                             Virtual office and Contract person in Estonia included.</p>
                             <button>Learn more</button>
                     </div>
-                    <div class="transformItem">
+                    <div class="transformItem transformItems">
                         <h3>Legal support</h3>
                         <p>Documents preparation for the whole life cycle of companies.
                             Sell/buy, shareholder, service agreements.
                             General meetings management and preparation.</p>
                             <button>Learn more</button>
                     </div>
-                    <div class="transformItem">
+                    <div class="transformItem transformItems">
                         <h3>Accounting, Audit</h3>
                         <p>Bookkeeping services for Estonian companies.
                             VAT Return filling and submitting
@@ -270,7 +270,7 @@
                             Audit support.</p>
                             <button>Learn more</button>
                     </div>
-                    <div class="transformItem">
+                    <div class="transformItem transformItems">
                         <h3>Open bank account</h3>
                         <p>Opening accounts in banks and payment institutions.
                             Compliance documents preparation.
@@ -278,7 +278,7 @@
                             Verification and Identification preparation.</p>
                             <button>Learn more</button>
                     </div>
-                    <div class="transformItem">
+                    <div class="transformItem transformItems">
                         <h3>Tax assistant</h3>
                         <p>Issuing Tax legal opinion
                             Proceeding of VAT Compliance
