--- a/index.html
+++ b/index.html
@@ -841,5 +841,14 @@
         });
         });
     </script> -->
+    <script>
+        $(document).ready(function(){
+        $(function () {$('li').click(function () {
+            $('.fromAreasScroll').animate({
+                scrollTop: 0
+            }, 600);
+            return false;});});
+        });
+    </script>
 </body>
 </html>
