--- a/support.html
+++ b/support.html
@@ -745,27 +745,27 @@
     </div>
     <!--Our other services-->
 
-    <div class="transformSection areWe">
+    <div class="transformSection areWe transformSectionSuppport">
         <div class="wrapper">
             <div class="transformSectionLeft">
                 <h2>Why are we</h2>
                 <p>Тут нужно разместить короткий вступительный тезисный текст</p>
             </div>
-            <div class="transformSectionRigh">
+             <div class="transformSectionRigh">
                 <div class="areWeContainer">
-                    <div class="transformItem">
+                    <div class="transformItem areWeContainerrr">
                         <h3>Individual solutions</h3>
                         <p>For each client we form the optimal solution to the problem, taking into account the needs</p>
                     </div>
-                    <div class="transformItem">
+                    <div class="transformItem areWeContainerrr">
                         <h3>Personal managern</h3>
                         <p>Each client is accompanied by a manager and provides up-to-date information on statuses</p>
                     </div>
-                    <div class="transformItem">
+                    <div class="transformItem areWeContainerrr">
                         <h3>Team</h3>
                         <p>MaxWise specialists have been working for more than 10 years and apply practical and best practices</p>
                     </div>
-                    <div class="transformItem">
+                    <div class="transformItem areWeContainerrr">
                         <h3>Remoteness</h3>
                         <p>All services can be obtained online without a physical presence in the country</p>
                     </div>
