--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
                     <a href="support.html">Our Expertise</a>
                 </li>
                 <li>
-                    <a href="blog.html">Estonian Companies</a>
+                    <a href="#">Estonian Companies</a>
                 </li>
                 <li>
                     <a href="registration.html">LegalBox</a>
@@ -114,7 +114,7 @@
                     <img src="img/btnArrow.svg" alt="">
                 </li>
                 <li>
-                    <a href="blog.html">LegalBox</a>
+                    <a href="#">LegalBox</a>
                     <img src="img/btnArrow.svg" alt="">
                 </li>
                 <li>
@@ -122,7 +122,7 @@
                     <img src="img/btnArrow.svg" alt="">
                 </li>
                 <li>
-                    <a href="#">Blog</a>
+                    <a href="blog.html">Blog</a>
                     <img src="img/btnArrow.svg" alt="">
                 </li>
         </ul>
